# nonebot-plugin-zxpm

./: README.md  pyproject.toml
nonebot_plugin_zxpm/: __init__.py  config.py  enum.py  exception.py  log.py  rules.py
nonebot_plugin_zxpm/commands/: __init__.py
nonebot_plugin_zxpm/commands/zxpm_add_group/: __init__.py  data_source.py
nonebot_plugin_zxpm/commands/zxpm_admin_watch/: __init__.py
nonebot_plugin_zxpm/commands/zxpm_ban/: __init__.py  _data_source.py
nonebot_plugin_zxpm/commands/zxpm_bot_manage/: __init__.py  bot_switch.py  full_function.py  plugin.py
nonebot_plugin_zxpm/commands/zxpm_help/: __init__.py  _data_source.py
nonebot_plugin_zxpm/commands/zxpm_hooks/: __init__.py  _auth_checker.py  zxpm_auth_hook.py  zxpm_ban_hook.py
nonebot_plugin_zxpm/commands/zxpm_init/: __init__.py  manager.py
nonebot_plugin_zxpm/commands/zxpm_plugin_switch/: __init__.py  _data_source.py  command.py
nonebot_plugin_zxpm/commands/zxpm_set_admin/: __init__.py
nonebot_plugin_zxpm/commands/zxpm_super_group/: __init__.py
nonebot_plugin_zxpm/db_connect/: __init__.py
nonebot_plugin_zxpm/extra/: __init__.py  limit.py
nonebot_plugin_zxpm/models/: ban_console.py  bot_console.py  group_console.py  level_user.py  plugin_info.py  plugin_limit.py
nonebot_plugin_zxpm/utils/: build_image.py  image_template.py  utils.py
